--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SchedulingApplication
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.23.jar=D:\\WGU\\C195\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\AdamS\\OneDrive\\Documents\\School\\C195\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -80,7 +80,7 @@ main.class=schedulingapplication.SchedulingApplication
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_11
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
