--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/SchedulingApplication
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\AdamS\\OneDrive\\Documents\\School\\C195\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-1=D:\\WGU\\C195\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JavaFX_15.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar}
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
